--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -83,7 +83,7 @@
     <string name="text_edit_my_car">Edit My Car</string>
     <string name="Alert">Alert</string>
     <string name="Radiater">Radiater</string>
-    <string name="break">Break</string>
+    <string name="bb">Break</string>
     <string name="breaksys">Break system</string>
     <string name="oilss">Oil Change</string>
     <string name="Kilometer">Kilometer</string>
