--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -89,5 +89,6 @@
     <string name="Kilometer">Kilometer</string>
     <string name="Volume">Volume</string>
     <string name="History">History</string>
+    <string name="CarMemorize">Car Memorize</string>
 
 </resources>
